# seangine

./: .dir-locals.el  .envrc  .gitignore  LICENSE  README.md  cabal.project  default.nix  feedback.yaml  flake.nix  fourmolu.yaml  overlay.nix  package.yaml  seangine.cabal  shell.nix  stack.yaml
.github/workflows/: ci.yml  test.yml
app/: Main.hs
app/Seangine/: Domain.hs  GraphicsPipeline.hs  Init.hs  Monad.hs  Render.hs  Shaders.hs  Utils.hs  Window.hs
app/Seangine/Domain/: Frame.hs  UniformBufferObject.hs  Vertex.hs
app/Seangine/Monad/: Cmd.hs  Vulkan.hs  VulkanFrame.hs
lib/Graphics/: Seangine.hs
lib/Graphics/Seangine/: App.hs  Config.hs  Domain.hs  Errors.hs  Frame.hs  FrameInit.hs  GraphicsPipeline.hs  HasVulkan.hs  Init.hs  Instance.hs  InstanceInit.hs  Lib.hs  Monad.hs  Render.hs  Scene.hs  Shaders.hs  Swapchain.hs  SwapchainInit.hs  VulkanFrame.hs  Window.hs
lib/Graphics/Seangine/Config/: Frame.hs  VulkanHandles.hs
lib/Graphics/Seangine/Domain/: Frame.hs  UniformBufferObject.hs  Vertex.hs
lib/Graphics/Seangine/Frame/: BufferDetails.hs  DescriptorSets.hs  FragShader.hs  FramesInFlight.hs  GraphicsPipelineDetails.hs  SwapchainDetails.hs  UniformBufferObject.hs  Vertex.hs  VertexShader.hs
lib/Graphics/Seangine/FrameInit/: BufferDetails.hs  DescriptorSets.hs  FrameInFlightInit.hs  SwapchainDetails.hs
lib/Graphics/Seangine/GraphicsPipeline/: FragShader.hs  VertexShader.hs
lib/Graphics/Seangine/Instance/: CommandBuffers.hs  PhysicalDeviceDetails.hs
lib/Graphics/Seangine/InstanceInit/: CommandBuffers.hs  PhysicalDeviceDetails.hs
lib/Graphics/Seangine/Internal/: BufferDetails.hs  DescriptorSets.hs  GraphicsPipelineDetails.hs  PhysicalDeviceDetails.hs  SwapchainDetails.hs  Utils.hs
lib/Graphics/Seangine/Monad/: Cmd.hs  Config.hs  Exception.hs  Frame.hs  Instance.hs  Vulkan.hs  VulkanFrame.hs
lib/Graphics/Seangine/Render/: ColumnMajorM44.hs  PushConstantObject.hs  UniformBufferObject.hs  Vertex.hs
lib/Graphics/Seangine/Shaders/: FragShader.hs  VertexShader.hs
lib/Graphics/Seangine/Shared/: Utils.hs
lib/Graphics/Seangine/SwapchainInit/: BufferDetails.hs  DescriptorSets.hs  SwapchainDetails.hs
lib/Graphics/Seangine/Window/: SDL.hs
nix/: hix.nix
scripts/: Fourmolu.hs  HLint.hs
src/: MyLib.hs
src/Graphics/: Seangine.hs
src/Graphics/Seangine/: Types.hs  Window.hs
src/Graphics/Seangine/Types/: Config.hs  Errors.hs  R.hs
src/Graphics/Seangine/Window/: Glfw.hs  Sdl.hs  Types.hs
test/: Driver.hs  Spec.hs
test/Graphics/Seangine/: AppSpec.hs  InitSpec.hs  LibSpec.hs  WindowSpec.hs
test/Graphics/Seangine/Monad/: VulkanSpec.hs
