cabal-version:      3.0
name:               seangine
version:            0.1.0.0
synopsis:           An experimental 3D rendering engine in Vulkan
homepage:           https://github.com/sgillespie/seangine
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable seangine
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.0.0,
        seangine
    hs-source-dirs:   app
    default-language: GHC2021

test-suite seangine-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.0.0,
        seangine
