cabal-version:      3.0
name:               seangine
version:            0.1.0.0
synopsis:           An experimental 3D rendering engine in Vulkan
homepage:           https://github.com/sgillespie/seangine
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-options
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wnoncanonical-monad-instances
        -fhide-source-paths
        -Wmissing-export-lists
        -Wpartial-fields
        -fwrite-ide-info
        -hiedir=.hie
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
    build-depends:
        base ^>= 4.16.0.0,
        relude,
        linear
    default-extensions:
        DerivingStrategies,
        OverloadedStrings,
        RecordWildCards,
        TypeFamilies
    default-language: GHC2021

library
    import:           common-options
    exposed-modules:
        Graphics.Seangine,
        Graphics.Seangine.Types,
        Graphics.Seangine.Types.Config,
        Graphics.Seangine.Types.Errors,
        Graphics.Seangine.Types.R,
        Graphics.Seangine.Window,
        Graphics.Seangine.Window.Sdl,
        Graphics.Seangine.Window.Glfw,
        Graphics.Seangine.Window.Types
    build-depends:
      GLFW-b,
      VulkanMemoryAllocator,
      resourcet,
      sdl2,
      unliftio-core,
      vector,
      vulkan
    extra-libraries:
      glfw
    hs-source-dirs:   src
    default-language: GHC2021

executable seangine
    import:           common-options
    main-is:          Main.hs
    other-modules:    Paths_seangine
    build-depends:
        optparse-applicative,
        seangine
    hs-source-dirs:   app
    default-language: GHC2021

test-suite seangine-test
    import:           common-options
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        seangine
